<resources>
    <string name="app_name">Eat Right</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
...
    <string name="error_unavl_email">This mail address is already in use</string>
    <string name="error_avl_uname">This username already taken</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="user_page_recommendations">Recommendations</string>
    <string name="user_page_histroy">History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_home_title">Welcome</string>
    <string name="user_home_mail">android.studio@android.com</string>
    <string name="consumption_history">Consumption History</string>
...
    <string name="name">Name</string>
    <string name="slug">Slug</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="food_image">Food Image</string>
    <string name="rating">Rating</string>
    <string name="allergic_ingredient">Allergic ingredient</string>
    <string name="_4">4</string>
    <string name="last_comment">Last Comment</string>
    <string name="add_food">Add Food</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add">Add Ingredient+</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="search_food">Search Food</string>
    <string name="calorie_range">Calorie Range</string>
    <string name="protein_range">Protein Range</string>
    <string name="fat_range">Fat Range</string>
    <string name="carbonhydrate_range">Carbonhydrate Range</string>
</resources>
...
